# liam-agent

.claude-plugin/: marketplace.json
liam-mcp/: LICENSE  README.md
liam-mcp/desktop-extension/: .gitignore  .mcpbignore  README.md  manifest.json  package-lock.json  package.json
liam-mcp/plugins/liam/: .mcp.json  README.md
liam-mcp/plugins/liam/.claude-plugin/: plugin.json
liam-python-sdk/: .gitignore  CHANGELOG.md  LICENSE  OPENCLAW_MEMORY_SKILL.md  README.md  pyproject.toml
liam-python-sdk/docs/md/: XDB_API_Reference.md
liam-python-sdk/docs/postman/: XDB API Set - Developers.postman_collection.json
liam-python-sdk/examples/: async_example.py  basic_usage.py  batch_operations.py
liam-python-sdk/liam_client/: __init__.py  async_client.py  client.py  crypto.py
liam-python-sdk/tests/: __init__.py  test_client.py
skills/openclaw/: OPENCLAW.md
