[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liam-client"
version = "1.0.0"
description = "Python SDK for the LIAM Memory Management API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "NetXD", email = "support@netxd.com"}
]
keywords = ["liam", "memory", "api", "netxd", "ai", "llm", "memory-management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.8.0"]
dev = [
    "aiohttp>=3.8.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = ["aiohttp>=3.8.0"]

[project.urls]
Homepage = "https://liam.netxd.com"
Documentation = "https://liam.netxd.com/#/developers"
Repository = "https://github.com/netsys-usa/liam-agent/tree/master/liam-python-sdk"
Issues = "https://github.com/netsys-usa/liam-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["liam_client*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
